--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Stalkie app
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -30,18 +30,17 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   record: ^4.1.1
   camera: ^0.9.8+1
   teledart: ^0.3.4
-  flutter_foreground_task: ^3.7.3
-  connectivity_plus: ^2.3.5
+  flutter_foreground_task: ^6.0.0+1
+  connectivity_plus: ^4.0.1
   geolocator: ^9.0.0
-  permission_handler: ^10.0.0  
-  shared_preferences: ^2.0.15    
+  permission_handler: ^10.0.0
+  shared_preferences: ^2.0.15
   background_sms: ^0.0.4
 
 dev_dependencies:
@@ -60,7 +59,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
